2009-03-28  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/37795
	* tree.h (combine_comparisons): Declare.
	* fold-const.c (combine_comparisons): Export.
	* tree-ssa-ifcombine.c (ifcombine_ifandif): Optimize two successive
	comparisons.
	(ifcombine_iforif): Use combine_comparisons.

	* gcc.dg/tree-ssa/ssa-ifcombine-7.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@145170 138bc75d-0d04-0410-961f-82ee72b054a4